internal/xds/translator/testdata/out/xds-ir/authn-multi-route-multi-provider.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route-www.test.com
      route:
        cluster: first-route-www.test.com
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: first-route-www.test.com
    - match:
        path: foo/baz
      name: second-route-www.test.com
      route:
        cluster: second-route-www.test.com
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: second-route-www.test.com
